# anthony-mcp

./: ANTHONY-MCP.md  README.md  glama.json  install.sh  pyproject.toml
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-03-17-gnome-mcp.md
docs/superpowers/specs/: 2026-03-17-gnome-mcp-design.md
extension/desktop-automation@anthonymcp.github.io/: dbus.js  extension.js  metadata.json  screenshot.js  volume.js  windows.js
extension/desktop-automation@anthonymcp.github.io/schemas/: org.gnome.shell.extensions.desktop-automation.gschema.xml
extension/desktop-automation@gnomemcp.github.io/: dbus.js  extension.js  indicator.js  input.js  metadata.json  notifications.js  screenshot.js  windows.js
extension/desktop-automation@sbuysse.github.io/: consent.js  indicator.js  input.js  metadata.json  stylesheet.css
extension/desktop-automation@sbuysse.github.io/schemas/: gschemas.compiled
mcp-server/: README.md  pyproject.toml
mcp-server/src/anthony_mcp/: __init__.py  dbus_client.py  exceptions.py  kde_client.py  media_control.py  open_file.py  open_url.py  quick_settings.py  search_files.py  server.py  system_control.py  utils.py  volume_control.py  wallpaper.py  wallpaper_index.py
mcp-server/src/gnome_desktop_mcp/: dbus_client.py  media_control.py  open_file.py  search_files.py  server.py  utils.py  wallpaper.py  wallpaper_index.py
tests/: test_dbus_client.py  test_key_mapping.py
