[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "anthony-mcp"
version = "0.1.0"
description = "MCP server for GNOME desktop automation via D-Bus"
readme = "README.md"
license = "GPL-3.0-only"
requires-python = ">=3.12"
authors = [
    { name = "sbuysse" },
]
keywords = ["mcp", "gnome", "wayland", "desktop-automation", "dbus"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: X11 Applications :: GTK",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Desktop Environment :: Gnome",
]
dependencies = [
    "mcp>=1.0.0",
    "dasbus>=1.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
anthony-mcp = "anthony_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/anthony_mcp"]

[tool.pytest.ini_options]
testpaths = ["../tests"]
